# git_afk

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: config.rs  git.rs  main.rs  watcher.rs
