[package]
name = "git_afk"
version = "0.5.0"
edition = "2021"
authors = ["Michal Vanko <mklakakilli@gmail.com>"]
license = "MIT"
description = "git_afk watches your git repositories for uncommitted changes and automatically commits/pushes them"
readme = "README.md"
homepage = "https://github.com/michalvankodev/git_afk"
repository = "https://github.com/michalvankodev/git_afk"
keywords = ["cli", "git", "autocommit"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap-verbosity-flag = "3.0.0"
clap_derive = { version = "4.5.5" } 
confy = "1.0.0"
ignore = "0.4.23"
log = "0.4.22"
notify = "8.0.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
env_logger = "0.11.5"
anyhow = "1.0.93"
notify-debouncer-full = "0.5.0"
chrono = "0.4.38"
